# Titan

./: .gitignore  CHANGELOG.md  CONTRACT.md  CONTRIBUTING.md  LICENSE  README.en.md  README.md  ROADMAP.md  design_notes.md  pyproject.toml  replit.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml
attached_assets/: Pasted---1784225697882_1784225697887.txt  Pasted-Architectural-Discussion-Project-Health--1783514116920_1783514116926.txt
docs/: faq.md  quickstart.md
docs/architecture/: design_principles.md
docs/concepts/: ctx.md  mental_model.md  middleware.md  models.md
docs/context/: architecture_reviews.md  privacy_protocol.md
docs/decisions/: 001-keyboard-builder.md  002-actions.md  003-capabilities.md  004-error-contracts.md  005-project-health.md  006-interactive-inspector.md  007-migration-assistant.md  008-message-links-protocol.md  009-runtime-contract-validator.md  010-timeline.md  011-playground.md  012-design-linter.md  013-performance-profiler.md  014-architect-ai.md  015-data-lifecycle-responsibility.md  016-user-data-registry.md  017-reserved-privacy-commands.md  README.md  (+1 more)
examples/: echo_bot.py  moderation_bot.py  welcome_bot.py
scripts/: generate_decisions_readme.py
src/titan/: bot.py  (+12 more)
tests/: test_actions.py  test_adapter.py  test_alias.py  test_ask.py  test_bot.py  test_capabilities.py  test_chat_dispatch.py  test_ctx.py  test_error_handler.py  test_error_philosophy.py  test_errors.py  test_health.py  test_inspector.py  test_keyboard.py  test_light.py  test_links_address.py  test_links_edge_cases.py  test_links_handler.py  test_links_identity.py  test_links_integration.py  test_links_manager.py  test_links_store.py  test_lint.py  test_middleware.py  test_migration.py  test_models.py  test_permissions.py  test_playground.py  test_privacy.py  test_profiler.py  test_real_world.py  test_recipes_welcome.py  test_router.py  test_timeline.py  test_update.py  test_validation.py
usage_validation/: bot.py
(+82 files in other folders)
