[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "titanx"
authors = [
    {name = "Waheed"},
]
version = "1.0.0"
description = "A simple and modern framework for building Telegram bots"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["telegram", "bot", "framework", "async"]

dependencies = [
    "aiohttp>=3.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=1.4.0",
]

[project.urls]
Homepage = "https://github.com/WaheedFox/Titan"
Issues = "https://github.com/WaheedFox/Titan/issues"

[tool.setuptools.packages.find]
where = ["src"]
